--- a/package.json
+++ b/package.json
@@ -22,8 +22,15 @@
     "@angular/platform-browser-dynamic": "~9.1.0",
     "@angular/router": "~9.1.0",
     "angular-bootstrap-md": "^9.3.1",
+    "apollo-angular": "1.1.1",
+    "apollo-angular-link-http": "^1.11.0",
+    "apollo-cache-inmemory": "1.2.5",
+    "apollo-client": "^2.3.3",
     "bootstrap": "^4.5.2",
+    "graphql": "^15.3.0",
+    "graphql-tag": "^2.11.0",
     "rxjs": "~6.5.4",
+    "rxjs-compat": "^6.6.2",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
   },
